# Vietnamese-Legal-Chatbot

./: .env  .gitignore  README.md  docker-compose.yml
chatbot_api/: pyproject.toml  requirements.txt
chatbot_api/src/: entrypoint.sh  main.py
chatbot_api/src/agents/: langgraph_agent.py  rag_agent.py
chatbot_api/src/chains/: cypher_chain.py  example_cypher_chain.py  example_vector_chain.py  only_cypher_chain.py  only_vector_chain.py  vector_chain.py
chatbot_frontend/: pyproject.toml
chatbot_frontend/src/: main.py
graphrag_neo4j_etl/: Dockerfile  pyproject.toml  requirements.txt
graphrag_neo4j_etl/src/: dataloader.py  doc_processor.py  entrypoint.sh  kg_constructing.py
graphrag_neo4j_etl/src/data/: relationship-export.csv  test.py
graphrag_neo4j_etl/src/data/chude19/demuc1/vanban11/: 28.2010.TTLT.BTC.BKHCN.docx
graphrag_neo4j_etl/src/data/chude19/demuc1/vanban2/: 1542018NĐ-CPveDKKDKhoahocvaCongnghe.docx  67.2009.ND-CP.docx  NĐ132022.docx
graphrag_neo4j_etl/src/data/chude19/demuc1/vanban30/: 2-DTThongtu(G)-TTNSNTky.docx
graphrag_neo4j_etl/src/data/chude19/demuc1/vanban32/: 02.2024.TT-BQP.docx
graphrag_neo4j_etl/src/data/chude19/demuc1/vanban35/: DUTHAOTHONGTUTHAYTHETHONGTU04DAKY.docx
tests/: async_agent_requests.py  sync_agent_requests.py
