[project]
name = "graphrag_neo4j_etl"
version = "0.1"
dependencies = [
    "langchain_community==0.3.13",
    "langchain_core==0.3.28",
    "neo4j==5.27.0",
   "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "retry==0.9.2",
    "docx2txt==0.8"
]


[project.optional-dependencies]
dev = ["black", "flake8"]
